summary name align with icons(fixed), sample person object

--- a/src/Summary.css
+++ b/src/Summary.css
@@ -6,17 +6,28 @@
   display: flex;
   justify-content: space-between;
 }
-.person-summary-body {
-}
+
 .person-summary-body-title {
   display: flex;
   justify-content: space-between;
 }
-.person-summary-body-icon-container {
+.person-summary-body-title h6{
+  margin:0px;
+  padding:0px;
+}
+#person-summary-body-title{
+  display:flex;
+  align-items:flex-end;
+}
+.person-summary-body-context-container{
+  margin-top:8px;
+  padding-left:32px;
+  font-size:12px;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .person-summary-body-icon-container span {
   /* padding-bottom: 8px; */
-  margin-left: 5px;
+  margin:0px 0px 0px 5px;
   font-size: larger;
 }
 .person-summary-body-icon-container span:last-child {
